[package]
name = "wheelbuf"
version = "0.2.0"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
license = "MIT"
description = "The wheelbuffer crate offers a ringbuffer-like structure without a read pointer, making multiple reads of a buffer possible. The store behind the buffer is flexible and can be a static array, a vector or any other structure that can be converted into a slice."
readme = "README.md"
repository = "https://github.com/mbr/wheelbuf"

[dependencies]
